@@ -6,6 +6,7 @@ Revision history for Perl module Math::Prime::Util::GMP
 
     - is_square(n)           Returns 1 if n is a perfect square
     - logint(n,base)         Integer log: largest e s.t. b^e <= n
+    - is_carmichael(n)       Returns 1 if n is a Carmichael number
 
     [FIXES]
 
